# 2014_2015_robotics_xdo

./: README.md
controllers/HelloWorld/: HelloWorld  HelloWorld.cpp
controllers/cameras_example/: CMakeLists.txt  MyRobot.cpp  MyRobot.h  cameras_example.cpp
controllers/compass_example/: Makefile  MyRobot.cpp  MyRobot.h  MyRobot.h~  compass_example  compass_example.cpp
controllers/lines_detector/: Makefile  MyRobot.cpp  MyRobot.h  lines_detector.cpp
controllers/obstacle_avoidance/: Makefile  MyRobot_obstacle_avoidance.cpp  MyRobot_obstacle_avoidance.h  obstacle_avoidance.cpp
controllers/obstacle_avoidance_example/: CMakeLists.txt  MyRobot.cpp  MyRobot.h  obstacle_avoidance_example
controllers/qtcreator-build/: CMakeCache.txt  Makefile  cmake_install.cmake  obstacle_avoidance_example.cbp
controllers/straight_compass/: CMakeLists.txt~
controllers/template/: CMakeLists.txt  MyRobot.cpp  MyRobot.h
controllers/wall_detector/: Makefile  Makefile~  MyRobot.cpp  MyRobot.h  wall_detector.cpp
controllers/wall_follower/: Makefile~  MyRobot_wall_follower.h  wall_follower
controllers/wall_follower_example/: CMakeLists.txt  MyRobot.cpp  MyRobot.h  wall_follower_example
webots/controllers/sensors/: Makefile  Makefile~  MyRobot_sensors.h~
webots/controllers/straight_compass/: straight_compass  straight_compass.cpp
webots/controllers/wall_follower/: Makefile  MyRobot_wall_follower.h~
worlds/: .robot.wbproj  .scenario00.wbproj  .scenario01.wbproj  .scenario_odometry.wbproj  CMakeLists.txt  robot.wbt  scenario00.wbt  scenario01.wbt  scenario_odometry.wbt
(+8 files in other folders)
